<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quetype_rating_1_10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout = "@layout/survey_questions_layout"/>
    <!-- theme   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_rating_1_10_theme"
        android:text="@string/question_wellbeing"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"/>

    <!-- Question text   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:layout_below="@id/type_rating_1_10_theme"
        android:text="@string/type_rating_1_5_question_text_sample"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:id="@+id/type_rating_1_10_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating1"
            android:textColor="@color/black"
            <!--android:button="@drawable/small_radio_button"
            android:scaleX="0.1"
            android:scaleY="0.1"-->
            android:textSize="12sp" />


        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating2"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating3"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating4"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating5"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating6"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating7"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating8"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating9"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            style="@style/SmallRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating10"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RadioGroup>



</RelativeLayout>