<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutweconnect.AboutWeconnectFragment">

        <!--  Base page  -->
        <include layout="@layout/menu_base_layout"/>
        <!-- Title   -->
        <TextView
            android:id="@+id/about_weconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/menu_about_weconnect"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp">

            <!--   content1    -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <!--   About this app   -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:scaleX="0.7"
                    android:scaleY="0.7"

                    android:src="@drawable/menu_weconnect_human"
                    android:contentDescription="@string/cartoon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_text1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:padding="16dp" />

                <!--    About Volunteer Victoria        -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu_volunteer_logo"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/volunteer_vic_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_vv_text1"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="50dp"
                    android:textAlignment="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_vv_text2"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:padding="16dp"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"/>

                <!--   About Volunteer West      -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu_vw_logo"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/volunteer_west_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_vw_text1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/intro_vw_text2"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/intro_vw_text2"
                    android:layout_marginTop="30dp"/>


            </LinearLayout>

        </ScrollView>

</FrameLayout>