<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/quetype_yes_no">
    <include layout = "@layout/survey_questions_layout"/>

    <!-- theme   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_yes_no_theme"
        android:text="@string/question_demographic_question"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"/>

    <!-- Question text   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_yes_no_question_text"
        android:layout_below="@id/type_yes_no_theme"
        android:text="@string/type_rating_1_5_question_text_sample"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>


    <RadioGroup
        android:id="@+id/type_rating_1_5_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_yes_no_question_text"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/yes"
            android:layout_marginEnd="50dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <RadioButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </RadioGroup>

</RelativeLayout>